<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorSecondary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:background="@drawable/background_light"
        android:layout_margin="@dimen/secondary_layout_margin"
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MaterialText.Title.Primary"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_fragment_title"
            android:textColor="@color/colorSecondary"/>

        <TextView
            style="@style/MaterialText.SubTitle"
            android:gravity="center"
            android:textColor="@color/colorSecondary"
            android:text="@string/main_fragment_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dagger"
            style="@style/MaterialButton.Accent"
            android:text="@string/dagger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/basic"
            style="@style/MaterialButton.Secondary"
            android:text="@string/basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>